Attempt to fix some CSS issues on mobile

--- a/stylesheets/page.css
+++ b/stylesheets/page.css
@@ -29,9 +29,16 @@
 	width: 14px;
 	height: 14px;
 	box-shadow: 0 8px 32px rgb(2, 4, 24);
-	display: flex;
+	display: grid;
 	justify-content: center;
+	text-align: center;
 	cursor: pointer;
+	position: relative;
+
+	text-size-adjust: none;
+	-ms-text-size-adjust: none;
+	-moz-text-size-adjust: none;
+	-webkit-text-size-adjust: none;
 }
 
 .red-dot:hover,
@@ -44,7 +51,6 @@
 	border-radius: 50%;
 	background-color: rgb(255, 96, 92);
 	color: rgb(255, 96, 92);
-	font-size: 1.5rem;
 }
 
 .red-dot:active {
@@ -52,25 +58,14 @@
 	border: 1px solid rgb(160, 60, 59);;
 }
 
-.red-dot > p {
-	position: absolute;
-	top: 10px;
-}
-
 .yellow-dot {
 	border-radius: 50%;
 	background: rgb(255, 189, 68);
 	color: rgb(255, 189, 68);
-	font-size: 2.2rem;
 }
 
 .yellow-dot:active {
 	background: rgb(173, 129, 47);
-}
-
-.yellow-dot > p {
-	position: absolute;
-	top: 5px;
 }
 
 .green-dot {
@@ -78,19 +73,37 @@
 	border-radius: 50%;
 	background: rgb(0, 202, 78);
 	color: rgb(0, 202, 78);
-	transform: rotate(270deg);
 }
 
 .green-dot:active {
 	background-color: rgb(1, 128, 50);
 }
 
+.red-dot > p,
+.yellow-dot > p,
 .green-dot > i {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	position: absolute;
+	top: 0px;
+	height: 100%;
+	width: 100%;
+}
+
+.red-dot > p {
+	top: -1px;
+	scale: 1.3;
 	font-weight: bold;
-	font-size: 1rem;
-	left: 2px;
-	top: 2px;
+}
+
+.yellow-dot > p {
+	top: -2px;
+	scale: 2.3;
+}
+
+.green-dot > i {
+	rotate: 270deg;
 }
 
 .draggable {
